<!--
  ~ Copyright 2019 TSDream Developer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Unipark TEST app</string>
    <string name="enter_login">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="loading_text">Loading. Please wait…</string>
    <string name="hello_unipark">Hello Unipark!</string>
    <string name="back">BACK</string>
    <string name="authentication">Authentication</string>
    <string name="registration">Registration</string>
    <string name="action_quit">Quit</string>
</resources>
