<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 TSDream Developer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignUpActivity">

    <TextView
        android:id="@+id/tv_auth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/registration"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintBottom_toTopOf="@+id/et_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/enter_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        android:autofillHints="Phone number"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_phone"
        app:layout_constraintStart_toStartOf="@+id/et_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_phone"
        android:autofillHints="First name"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/et_firstname"
        app:layout_constraintStart_toStartOf="@+id/et_firstname"
        app:layout_constraintTop_toBottomOf="@+id/et_firstname" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
        app:layout_constraintStart_toStartOf="@+id/button_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

</android.support.constraint.ConstraintLayout>